public UI modifications